fixed Java Class Problem on mobile

--- a/mysite/src/Home/Home.css
+++ b/mysite/src/Home/Home.css
@@ -1,253 +1,4 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 0.5fr 1.5fr 1.5fr 0.5fr;
-    grid-template-rows: 0.4fr 1.1fr 0.6fr 0.4fr 0.4fr 3.1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-      ". . . ."
-      ". Name Name ."
-      ". Description Description ."
-      ". Button-1 Button-2 ."
-      ". Social-Medias Social-Medias ."
-      ". . . .";
-  }
-  
-  .Name { grid-area: Name; 
-/* Victoria Williamson */
-
-
-font-family: Roboto;
-font-style: normal;
-font-weight: bold;
-font-size: calc(20px + 5vw);
-text-align: center;
-
-color: #FFFFFF; 
-
-}
-#border 
-{
-  width: calc(1px + 1vw);
-  height: calc(6px + 1vh);
-}
-
-#blob1-desktop
-{
-  position: relative;
-  width: calc(100px + 35vw);
-  height: 947px;
-  right:0px;
-  top: -121px;
-  
-}
-.centercontent{
-  position:absolute;
-  max-width: 100vw;
-  max-height: 100vh;
-  height: auto;
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  border:2px solid tomato;
-  transform: translate(-50%, -50%);
-}
-#blob-1
-{
-  background: no-repeat 95% 95% url("blob_desktop/blob1-desktop.svg");
-}
-#blob2-desktop
-{
-  
-position: relative;
-width: calc(100px + 35vw);
-height: 548px;
-left: -400px;
-top: 0px;
-
-}
-
-#blob3-desktop
-{
-  position: relative;
-  width: calc(100px + 35vw);
-height: 487px;
-left: 0px;
-top: 551px;
-}
-svg {
-  display: block;
-  margin: 0 auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-#bigGridHome
-{
-  position: relative;
-}
-/* Linkedin */
-#LinkedIn-Big
-{
-    /* GitHub */
-margin-bottom: calc(5px + 1vh);
-margin-left: 10px;
-margin-right: 10px;
-width: calc(30px + 2vw);
-height: calc(15px + 1vh);
-left: 0px;
-
-color: #FFFFFF;
-}
-
-#Twitter-Big
-{
-
-  /* GitHub */
-margin-bottom: calc(5px + 1vh);
-text-align: center;
-vertical-align:middle;
-margin-left: 10px;
-margin-right: 10px;
-width: calc(30px + 2vw);
-height: calc(15px + 1vh);
-left: 0px;
-
-color: #FFFFFF;
-  
-}
-
-#Github-Big
-{
-/* GitHub */
-margin-bottom: calc(5px + 1vh);
-text-align: center;
-vertical-align:middle;
-margin-left: 10px;
-margin-right: 10px;
-width: calc(30px + 2vw);
-height: calc(15px + 1vh);
-left: 0px;
-
-color: #FFFFFF;
-/* background-color:red; */
-}
-#grid1Home
-{
-
-}
-  
-  .Description {
-    display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    "Major"
-    "Grad-Year"
-    "Location";
-  grid-area: Description;
-    /* Computer Science & Statistics Major at the University of Central Florida 2023 Graduate Orlando, FL */
-
-position: absolute;
-width: 980px;
-height: 105px;
-left: 420px;
-top: 458px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: 900;
-font-size: 30px;
-line-height: 35px;
-text-align: center;
-
-color: #FFFDFD;
-
-
-  }
-  
-  .Major { grid-area: Major;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: calc(8px + 1vw);
-    text-align: center;
-    
-    color: #FFFFFF; }
-  
-  .Grad-Year { grid-area: Grad-Year; 
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: calc(8px + 1vw);
-    text-align: center;
-    
-    color: #FFFFFF; }
-  .Location { grid-area: Location;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: calc(8px + 1vw);
-    text-align: center;
-    
-    color: #FFFFFF;  }
-  .Button-1 { grid-area: Button-1;
-    
-position: absolute;
-width: 186px;
-height: 43px;
-left: 702px;
-top: 586px;
-
-}
-  
-  .Button-2 { grid-area: Button-2; /* resume */
-
-    position: absolute;
-    width: 186px;
-    height: 43px;
-    left: 917px;
-    top: 586px;
-    }
-  
-  .Social-Medias { grid-area: Social-Medias; }
-  
-  #gitImg
-  {
-      /* GitHub */
-
-position: absolute;
-width: 61px;
-height: 63px;
-left: 772px;
-top: 652px;
-
-  }
-
-  #twitterImg
-  {
-      /* Twitter */
-
-position: absolute;
-width: 61px;
-height: 63px;
-left: 888px;
-top: 654px;
-
-  }
-
-  #LinkedInImg
-  {
-      /* Linkedin */
-
-position: absolute;
-width: 61px;
-height: 63px;
-left: 1006px;
-top: 652px;
-
-  }
-  .background
+.background
   {
     background-image: url('./Background.svg');
     background-size: cover;
